--- a/frontend/src/app/modules/buy-option/buy-option.component.html
+++ b/frontend/src/app/modules/buy-option/buy-option.component.html
@@ -79,6 +79,7 @@
           <th scope="col">Título</th>
           <th scope="col">Preço de venda normal</th>
           <th scope="col">Preço de venda com desconto</th>
+          <th scope="col">Quantidade de cupons</th>
           <th scope="col">Data de entrada</th>
           <th scope="col">Data de saída</th>
           <th scope="col"></th>
@@ -90,6 +91,7 @@
           <td>{{buyOption.title}}</td>
           <td>{{buyOption.normalPrice | currency: 'R$'}}</td>
           <td>{{buyOption.salePrice | currency: 'R$'}}</td>
+          <td>{{buyOption.quantityCupom}}</td>
           <td>{{buyOption.startDate | date: 'dd/MM/yyyy'}}</td>
           <td>{{buyOption.endDate | date: 'dd/MM/yyyy'}}</td>
           <td class="text-center">
